# Algo-Mag

P1/: CMakeLists.txt  QuickSorter.cpp  QuickSorter.h  main.cpp
P1-QuickSort/: CMakeLists.txt  Exception.h  main.cpp
P1-QuickSort/Allocator/: AllocatorUtil.h  CoalesceAllocator.cpp  CoalesceAllocator.h  FixedSizeAllocator.cpp  FixedSizeAllocator.h  MemoryAllocator.cpp  MemoryAllocator.h
P1-QuickSort/Allocator_lib/: AllocatorUtil.cpp  CMakeLists.txt  CoalesceAllocator.cpp  CoalesceAllocator.h  FixedSizeAllocator.cpp  FixedSizeAllocator.h  MemoryAllocator.cpp  MemoryAllocator.h
P1-QuickSort/Containers_lib/: Array.cpp  Array.h  CMakeLists.txt  List.cpp  List.h
P1-QuickSort/Dictionary/: Dictionary.cpp  Dictionary.h
P1-QuickSort/Google_tests/: AllocatorTest.cpp  ArrayTest.cpp  CMakeLists.txt  DictionaryTest.cpp  ListTest.cpp  QuickSorterTests.cpp  TestUtils.cpp
P1-QuickSort/QuickSort_lib/: CMakeLists.txt  QuickSorter.cpp  QuickSorter.h
P1/Google_tests/: CMakeLists.txt  ConverterTests.cpp
P1/Source/: main.cpp
